@@ -158,13 +158,16 @@ public:
         _display->setName("Display");
 
         auto registry = remoteEnv->findProxy("Pothos/BlockRegistry");
-        _snooper = registry.callProxy("/blocks/stream_snooper");
-        _snooper.callVoid("setName", "Snooper");
+        _trigger = registry.callProxy("/blocks/wave_trigger");
+        _trigger.callVoid("setName", "Trigger");
+        _trigger.callVoid("setMode", "PERIODIC");
 
         //register calls in this topology
         this->registerCall(this, POTHOS_FCN_TUPLE(Periodogram, setNumInputs));
         this->registerCall(this, POTHOS_FCN_TUPLE(Periodogram, setDisplayRate));
         this->registerCall(this, POTHOS_FCN_TUPLE(Periodogram, setNumFFTBins));
+        this->registerCall(this, POTHOS_FCN_TUPLE(Periodogram, setFreqLabelId));
+        this->registerCall(this, POTHOS_FCN_TUPLE(Periodogram, setRateLabelId));
 
         //connect to internal display block
         this->connect(this, "setTitle", _display, "setTitle");
@@ -182,8 +185,11 @@ public:
         this->connect(_display, "frequencySelected", this, "frequencySelected");
 
         //connect to the internal snooper block
-        this->connect(this, "setDisplayRate", _snooper, "setTriggerRate");
-        this->connect(this, "setNumFFTBins", _snooper, "setChunkSize");
+        this->connect(this, "setDisplayRate", _trigger, "setEventRate");
+        this->connect(this, "setNumFFTBins", _trigger, "setNumPoints");
+
+        //connect stream ports
+        this->connect(_trigger, 0, _display, 0);
 
     }
 
@@ -202,29 +208,50 @@ public:
 
     void setNumInputs(const size_t numInputs)
     {
-        _display->setNumInputs(numInputs);
-        _snooper.callVoid("setNumPorts", numInputs);
+        _trigger.callVoid("setNumPorts", numInputs);
         for (size_t i = 0; i < numInputs; i++)
         {
-            this->connect(this, i, _snooper, i);
-            this->connect(_snooper, i, _display, i);
+            this->connect(this, i, _trigger, i);
         }
     }
 
     void setDisplayRate(const double rate)
     {
-        _snooper.callVoid("setTriggerRate", rate);
+        _trigger.callVoid("setEventRate", rate);
     }
 
     void setNumFFTBins(const size_t num)
     {
-        _snooper.callVoid("setChunkSize", num);
+        _trigger.callVoid("setNumPoints", num);
         _display->setNumFFTBins(num);
     }
 
+    void setFreqLabelId(const std::string &id)
+    {
+        _display->setFreqLabelId(id);
+        _freqLabelId = id;
+        this->updateIdsList();
+    }
+
+    void setRateLabelId(const std::string &id)
+    {
+        _display->setRateLabelId(id);
+        _rateLabelId = id;
+        this->updateIdsList();
+    }
+
+    void updateIdsList(void)
+    {
+        std::vector<std::string> ids;
+        if (not _freqLabelId.empty()) ids.push_back(_freqLabelId);
+        if (not _rateLabelId.empty()) ids.push_back(_rateLabelId);
+        _trigger.callVoid("setIdsList", ids);
+    }
+
 private:
-    Pothos::Proxy _snooper;
+    Pothos::Proxy _trigger;
     std::shared_ptr<PeriodogramDisplay> _display;
+    std::string _freqLabelId, _rateLabelId;
 };
 
 /***********************************************************************
